--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.5",
+    "@next-auth/firebase-adapter": "^0.0.2-canary.207",
+    "firebase": "^9.6.6",
     "next": "latest",
+    "next-auth": "^4.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
